--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
                 <p class="question code ml-5" id="question5code">
                   int a; <br />
                   if(a){ <br />
-                  cout<<"CKMKB" <br />
+                  cout<<"CKMKB"; <br />
                   }else{ <br />
-                  cout<<"PKMKB" <br />
+                  cout<<"PKMKB"; <br />
                   } <br />
                 </p>
                 <div class="form-check">
