Add pattern questions

--- a/index.html
+++ b/index.html
@@ -40,21 +40,22 @@
         <h1 class="display-3">C++ MCQs</h1>
         <p class="lead">Padh le beta mauka hai</p>
         <hr class="my-2" />
-        <h2>Operators</h2>
+        <h2>Decision and Loops</h2>
         <div class="lead">
           <form onsubmit="return check()">
             <ol>
               <li class="question1">
-                <p class="question" id="question1">Output kya hoga ?</p>
+                <p class="question" id="question1">Print the pattern for n rows ( here n = 5 )</p>
                 <p class="question code ml-5" id="question1code">
                     <pre>
-    int a = 10 ; 
-    cout<< a--; 
-    a=a+20; 
-    coutt<< a; 
+    *              
+    * *
+    * * *
+    * * * *
+    * * * * *                  
                     </pre>
                 </p>
-                <div class="form-check">
+                <!-- <div class="form-check">
                   <label class="form-check-label d-block">
                     <input
                       type="checkbox"
@@ -91,19 +92,20 @@
                     />
                     1030
                   </label>
-                </div>
+                </div> -->
               </li>
               <li class="question2">
-                <p class="question" id="question2">Output kya hoga ?</p>
+                <p class="question" id="question2">Print the pattern for n rows ( here n = 5 )</p>
                 <p class="question code ml-5" id="question2code">
                     <pre>
-    int a = 3 ; 
-    while(a){ 
-      cout<< --a ; 
-    } 
+            *
+          * *           
+        * * *
+      * * * *
+    * * * * *
                     </pre>
                 </p>
-                <div class="form-check">
+                <!-- <div class="form-check">
                   <label class="form-check-label d-block">
                     <input
                       type="checkbox"
@@ -143,17 +145,20 @@
                     />
                     3210
                   </label>
-                </div>
+                </div> -->
               </li>
               <li class="question3">
-                <p class="question" id="question3">Output kya hoga ?</p>
+                <p class="question" id="question3">Print the pattern for n rows ( here n = 5 )</p>
                 <p class="question code ml-5" id="question3code">
                   <pre>
-    char a[29] = "Techno India Chutiya College";
-    cout<< a[27]<<","<< a[28];
+        *
+       * *
+      * * *
+     * * * *
+    * * * * *       
                   </pre>
                 </p>
-                <div class="form-check">
+              <!--   <div class="form-check">
                   <label class="form-check-label d-block">
                     <input
                       type="checkbox"
@@ -195,17 +200,24 @@
                       error : a[28] is out of the index range of array a.
                   </label>
                 </div>
-              </li>
+              </li> -->
               <li class="question4">
-                <p class="question" id="question4">Output kya hoga ?</p>
+                <p class="question" id="question4">Print the pattern for n rows ( here n = 10 )</p>
                 <p class="question code ml-5" id="question4code">
                     <pre>
-    int a = 20; 
-    int b = a >> 1 ; 
-    cout<< b; 
+    * * * * *  * * * * * 
+    * * * *      * * * * 
+    * * *          * * * 
+    * *              * * 
+    *                  * 
+    *                  * 
+    * *              * * 
+    * * *          * * * 
+    * * * *      * * * * 
+    * * * * *  * * * * * 
                     </pre>
                 </p>
-                <div class="form-check">
+            <!--    <div class="form-check">
                   <label class="form-check-label d-block">
                     <input
                       type="checkbox"
@@ -572,13 +584,13 @@
                     ::
                   </label>
                 </div>
-              </li>
+              </li> -->
             </ol>
-            <input
+            <!-- <input
               type="submit"
               class="btn btn-primary btn-lg"
               value="Submit"
-            />
+            /> -->
           </form>
         </div>
         <div class="jumbotron hide">
