--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           <form onsubmit="return check()">
             <ol>
               <li class="question1">
-                <p class="question" id="question1">Print the pattern for n rows ( here n = 5 )</p>
+                <p class="question" id="question1">Print the pattern for n rows</p>
                 <p class="question code ml-5" id="question1code">
                     <pre>
     *              
     * *
-    * * *
+    * * *          ( here n = 5 )
     * * * *
     * * * * *                  
                     </pre>
@@ -95,12 +95,12 @@
                 </div> -->
               </li>
               <li class="question2">
-                <p class="question" id="question2">Print the pattern for n rows ( here n = 5 )</p>
+                <p class="question" id="question2">Print the pattern for n rows</p>
                 <p class="question code ml-5" id="question2code">
                     <pre>
             *
           * *           
-        * * *
+        * * *     ( here n = 5 )
       * * * *
     * * * * *
                     </pre>
@@ -148,12 +148,12 @@
                 </div> -->
               </li>
               <li class="question3">
-                <p class="question" id="question3">Print the pattern for n rows ( here n = 5 )</p>
+                <p class="question" id="question3">Print the pattern for n rows</p>
                 <p class="question code ml-5" id="question3code">
                   <pre>
         *
        * *
-      * * *
+      * * *       ( here n = 5 )
      * * * *
     * * * * *       
                   </pre>
@@ -202,14 +202,14 @@
                 </div>
               </li> -->
               <li class="question4">
-                <p class="question" id="question4">Print the pattern for n rows ( here n = 10 )</p>
+                <p class="question" id="question4">Print the pattern for n rows</p>
                 <p class="question code ml-5" id="question4code">
                     <pre>
     * * * * *  * * * * * 
     * * * *      * * * * 
     * * *          * * * 
     * *              * * 
-    *                  * 
+    *                  *      ( here n = 10 )
     *                  * 
     * *              * * 
     * * *          * * * 
